--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,27 @@ name = "reproq-django"
 version = "0.1.0"
 description = "Django 6.0 Tasks backend for reproq-worker (Postgres queue + deterministic runner)"
 readme = "README.md"
+authors = [{name = "Alejandro Peña", email = "adpena@gmail.com"}]
+license = {text = "MIT"}
 requires-python = ">=3.12"
+classifiers = [
+    "Framework :: Django",
+    "Framework :: Django :: 6.0",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
+]
 dependencies = [
-  "Django>=6.0",
+    "Django>=6.0",
+    "psycopg[binary]>=3.1.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.3.4",
+    "pytest-django>=4.9.0",
+    "ruff>=0.8.4",
 ]
 
 [tool.setuptools]
