--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "reproq-django"
-version = "0.1.2"
+version = "0.1.3"
 description = "Django 6.0 Tasks backend for reproq-worker (Postgres queue + deterministic runner)"
 readme = "README.md"
 authors = [{name = "Alejandro Peña", email = "adpena@gmail.com"}]
@@ -35,3 +35,6 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+reproq_django = ["templates/admin/reproq_django/taskrun/change_list.html"]
