--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "reproq-django"
-version = "0.1.506"
+version = "0.1.507"
 description = "Django 6.0 Tasks backend for reproq-worker (Postgres queue + deterministic runner)"
 readme = "README.md"
 authors = [{name = "Alejandro Peña", email = "adpena@gmail.com"}]
@@ -37,4 +37,8 @@ package-dir = {"" = "src"}
 where = ["src"]
 
 [tool.setuptools.package-data]
-reproq_django = ["templates/admin/reproq_django/taskrun/change_list.html"]
+reproq_django = [
+    "templates/admin/reproq_django/taskrun/change_list.html",
+    "resources/*.yaml",
+    "resources/*.toml",
+]
