--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .
-        pip install django>=6.0 psycopg[binary]
+        pip install "django>=6.0,<7.0" psycopg[binary]
 
     - name: Run Tests
       run: python tests/test_backend.py
