--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "reproq-django"
-version = "0.1.511"
+version = "0.1.512"
 description = "Django 6.0 Tasks backend for reproq-worker (Postgres queue + deterministic runner)"
 readme = "README.md"
 authors = [{name = "Alejandro Peña", email = "adpena@gmail.com"}]
@@ -41,4 +41,5 @@ reproq_django = [
     "templates/admin/reproq_django/taskrun/change_list.html",
     "resources/*.yaml",
     "resources/*.toml",
+    "resources/*.sh",
 ]
