--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "reproq-django"
-version = "0.1.515"
+version = "0.1.516"
 description = "Django 6.0 Tasks backend for reproq-worker (Postgres queue + deterministic runner)"
 readme = "README.md"
 authors = [{name = "Alejandro Peña", email = "adpena@gmail.com"}]
@@ -39,6 +39,7 @@ where = ["src"]
 [tool.setuptools.package-data]
 reproq_django = [
     "templates/admin/reproq_django/taskrun/change_list.html",
+    "templates/reproq_tui/*.html",
     "resources/*.yaml",
     "resources/*.toml",
     "resources/*.sh",
